// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobStepDescription /> renders and calls getStepDescription 1`] = `
<Step__StyledJobStepDescription>
  <strong>
    Foo
  </strong>
  <small
    className="text-muted"
  >
    Bar
  </small>
  <JobStepTimestamp />
</Step__StyledJobStepDescription>
`;

exports[`<JobStepIcon /> renders correct icon when state cancelled 1`] = `
<Icon
  bsStyle="danger"
  faStyle="fas"
  fixedWidth={true}
  name="ban"
  pullRight={false}
/>
`;

exports[`<JobStepIcon /> renders correct icon when state complete 1`] = `
<Icon
  bsStyle="success"
  faStyle="fas"
  fixedWidth={true}
  name="check"
  pullRight={false}
/>
`;

exports[`<JobStepIcon /> renders correct icon when state error 1`] = `
<Icon
  bsStyle="danger"
  faStyle="fas"
  fixedWidth={true}
  name="times"
  pullRight={false}
/>
`;

exports[`<JobStepIcon /> renders correct icon when state running 1`] = `
<Loader
  color="#07689d"
  size="12px"
  style={
    Object {
      "padding": "0 1.5px",
    }
  }
/>
`;

exports[`<JobStepIcon /> renders correct icon when state waiting 1`] = `
<Icon
  bsStyle="info"
  faStyle="fas"
  fixedWidth={true}
  name="pause"
  pullRight={false}
/>
`;

exports[`<JobStepIcon /> renders correct icon when step complete 1`] = `
<Icon
  bsStyle="primary"
  faStyle="fas"
  fixedWidth={true}
  name="arrow-circle-down"
  pullRight={false}
/>
`;
